--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Web Page</title>
+    <title>WELCOME TO DEVOPS</title>
     <style>
         body {
             font-family: Arial, sans-serif;
