--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>HELLO TEAM</h1>
     <p>This is another example of a basic HTML page.</p>
     <button onclick="alert('You clicked the button!')">Click Me</button>
 </body>
