--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
             color: YELLOW;
         }
         p {
-            color: gray;
+            color: BLUE;
         }
     </style>
 </head>
