--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
             text-align: center;
         }
         h1 {
-            color: RED;
+            color: YELLOW;
         }
         p {
             color: BLUE;
